final product with test cases

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,23 @@
 spring.application.name=app
-spring.security.oauth2.client.registration.google.client-id=your-google-client-id.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=your-google-client-secret
-spring.security.oauth2.client.registration.google.scope=openid,profile,email,https://mail.google.com/
-spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
-openai.api.key=YOUR_OPENAI_KEY
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/jump
-spring.datasource.username=postgres
-spring.datasource.password=rootroot
+# Database Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update   # or validate / none in prod
+spring.jpa.hibernate.ddl-auto=update
+
+# Server Configuration
+server.port=${PORT:8080}
+
+# OAuth2 Google Configuration
+# These should be set via environment variables or secrets.properties
+# spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+# spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=openid,profile,email,https://www.googleapis.com/auth/gmail.readonly,https://www.googleapis.com/auth/gmail.modify
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.google.client-authentication-method=client_secret_post
+
+# OAuth2 Provider Configuration
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://openidconnect.googleapis.com/v1/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
