adding gemini ai and updating configurations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,22 @@
 spring.application.name=app
 
 # Database Configuration
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+# Fly.io sets DATABASE_URL automatically when PostgreSQL is attached
+# Spring Boot will auto-detect it, but we can also explicitly configure if needed
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.validation-timeout=5000
+spring.datasource.hikari.maximum-pool-size=5
 # Server Configuration
 server.port=${PORT:8080}
+server.address=0.0.0.0
+
 
 # OAuth2 Google Configuration
 # These should be set via environment variables or secrets.properties
-# spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
-# spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
-spring.security.oauth2.client.registration.google.scope=openid,profile,email,https://www.googleapis.com/auth/gmail.readonly,https://www.googleapis.com/auth/gmail.modify
-spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+#spring.security.oauth2.client.registration.google.scope=openid,profile,email,https://www.googleapis.com/auth/gmail.readonly,https://www.googleapis.com/auth/gmail.modify
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.google.client-authentication-method=client_secret_post
 
@@ -21,3 +25,17 @@ spring.security.oauth2.client.provider.google.authorization-uri=https://accounts
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://openidconnect.googleapis.com/v1/userinfo
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.open-in-view=false
+
+# AI Provider Configuration
+# Options: "openai" (default) or "gemini"
+# Set ai.provider=gemini to use Google Gemini (much cheaper!)
+ai.provider=openai
+# OpenAI API Key (if using OpenAI)
+#openai.api.key=${OPENAI_API_KEY:}
+# Google Gemini API Key (if using Gemini)
+# Get your key from: https://makersuite.google.com/app/apikey
+#gemini.api.key=${GEMINI_API_KEY:}
+
+
