--- a/fly.toml
+++ b/fly.toml
@@ -1,38 +1,41 @@
-app = "jump-email-sorter"
-primary_region = "iad"
+# fly.toml app configuration file generated for jump-email-sorter on 2026-01-12T03:26:40+01:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'jump-email-sorter'
+primary_region = 'iad'
 
 [build]
-  dockerfile = "Dockerfile"
+  dockerfile = 'Dockerfile'
 
 [env]
-  PORT = "8080"
+  PORT = '8080'
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  processes = ['app']
 
 [[services]]
-  protocol = "tcp"
+  protocol = 'tcp'
   internal_port = 8080
+  auto_stop_machines = false
+  auto_start_machines = true
 
   [[services.ports]]
     port = 80
-    handlers = ["http"]
+    handlers = ['http']
     force_https = true
 
   [[services.ports]]
     port = 443
-    handlers = ["tls", "http"]
+    handlers = ['tls', 'http']
 
-[vm]
-  cpu_kind = "shared"
+[[vm]]
+  memory = '512mb'
   cpus = 1
   memory_mb = 512
 
-[[vm.mounts]]
-  source = "data"
-  destination = "/data"
