--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,22 @@
             <version>0.18.2</version>
         </dependency>
 
-
+        <!-- Selenium for browser automation (unsubscribe) -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.15.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-chrome-driver</artifactId>
+            <version>4.15.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.6.2</version>
+        </dependency>
 
         <!-- Lombok -->
         <dependency>
